[gd_scene load_steps=7 format=3 uid="uid://bqmof5mk6palh"]

[ext_resource type="Texture2D" uid="uid://bbwhgepqriju8" path="res://Scenes/Mini_Games/Color_Selection/Game/Sprites/Paint_Drop_1.png" id="1"]
[ext_resource type="Script" uid="uid://ccjywf4jdkxhq" path="res://Scenes/Mini_Games/Color_Selection/Game/Scripts/Paint_Drop.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://d27h8fu7bavp8" path="res://Global_Resources/Audio/SFX/Bump_Short_1.wav" id="3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ykpkg"]
bounce = 0.2
absorbent = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lmvkv"]
friction = 0.25
bounce = 0.75

[sub_resource type="CircleShape2D" id="2"]
radius = 8.0

[node name="Paint_Drop" type="RigidBody2D" groups=["Paint_Drop"]]
light_mask = 4
visibility_layer = 4
collision_layer = 196608
collision_mask = 65536
gravity_scale = 0.6
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("2")
_e_on_floor_physics_mat = SubResource("PhysicsMaterial_ykpkg")
_e_in_air_physics_mat = SubResource("PhysicsMaterial_lmvkv")

[node name="Sprite" type="Sprite2D" parent="."]
light_mask = 4
visibility_layer = 4
texture = ExtResource("1")

[node name="Collision" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 4
shape = SubResource("2")

[node name="Audio_Bump" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
light_mask = 4
visibility_layer = 4
stream = ExtResource("3")
volume_db = -6.0
pitch_scale = 2.5
bus = &"SFX"

[node name="Audio_Bump_CD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
